# tiralabra

./: .coveragerc  .env  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
data/input/: abc_test_data.txt  test_data.txt
dokumentaatio/: kayttoohje.md  maarittely.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: app_logic.py  config.py  file_service.py  index.py  service.py  trie.py  trie_service.py  ui.py
src/repositories/: file_service.py
src/services/: trie_service.py
src/tests/: abcparser_test.py  app_logic_test.py  file_service_test.py  trie_service_test.py  trie_test.py  trienode_test.py
src/tests/test_data/input/: test_input_1.txt
src/tools/: abcparser.py
src/utilities/: abcparser.py
